user register and login

--- a/templates/game/register.html
+++ b/templates/game/register.html
@@ -18,7 +18,7 @@
                   <label for="password">Password</label>
                 </div>
                 <div class="input-field col s12">
-                  <input id="password" name="password2" type="password" class="validate">
+                  <input id="password2" name="password2" type="password" class="validate">
                   <label for="password2">Password Again</label>
                 </div>
                 <div class="col s8 offset-s2">
