--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,7 @@
     <title>Game</title>
 </head>
 <body>
-    {% include 'partials/_navbar.html' %}
-
+    {% include 'partials/_alerts.html' %}
     {% block content %}
 
     {% endblock %}
