--- a/templates/game/login.html
+++ b/templates/game/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% include 'partials/_navbar.html' %}
 <div class="container">
   <div class="row">
       <div class="col s12 m8 offset-m2 l6 offset-l3">
